--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
+  
   "name": "-fly",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+   
+  
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
